tests/paczka1/fuzzy1/60658427.err
Error in line 12: cAL1YYxcX A428 36,1
Error in line 14: cAL1YYxcX A743 27,6
Error in line 8: V1p A751 56,9
Error in line 22: V1p A743 71,5
Error in line 28: V1p A428 81,8
